Fix off-center header
Fixes #6

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,6 @@ header {
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
-	min-width: 320px;
-	max-width: 480px;
 }
 
 header img {
